[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/player2.png" type="Texture" id=1]
[ext_resource path="res://src/aktor/Player.gd" type="Script" id=2]
[ext_resource path="res://src/menu/Born2bSportyV2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/up.png" type="Texture" id=4]
[ext_resource path="res://assets/left.png" type="Texture" id=5]
[ext_resource path="res://assets/right.png" type="Texture" id=6]
[ext_resource path="res://assets/down.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/Sad Emotional Piano Music - Gaming Background Music (HD).wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Born2bSportyV2.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=10]
[ext_resource path="res://assets/player-premium.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.8272, 33.695 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.799332, -7.93695 )
script = ExtResource( 2 )
premiumskin = ExtResource( 11 )
speed = Vector2( 500, 500 )

[node name="player2" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.500833 )
texture = ExtResource( 1 )

[node name="GoUp" type="TouchScreenButton" parent="player2"]
position = Vector2( -42.1692, 335.427 )
scale = Vector2( 2, 2 )
normal = ExtResource( 4 )
action = "move up"

[node name="GoDown" type="TouchScreenButton" parent="player2"]
position = Vector2( -44.7769, 592.017 )
scale = Vector2( 2, 2 )
normal = ExtResource( 7 )
action = "move down"

[node name="GoLeft" type="TouchScreenButton" parent="player2"]
position = Vector2( -171.427, 472.772 )
scale = Vector2( 2, 2 )
normal = ExtResource( 5 )
action = "move left"

[node name="GoRight" type="TouchScreenButton" parent="player2"]
position = Vector2( 68.2657, 466.138 )
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
action = "move right"

[node name="Camera2D" type="Camera2D" parent="player2"]
position = Vector2( 0, 68 )
current = true

[node name="menuquit" type="Button" parent="player2"]
margin_left = -465.134
margin_top = -664.753
margin_right = -409.134
margin_bottom = -607.753
custom_fonts/font = SubResource( 1 )
text = "><"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="actuallvl" type="Label" parent="player2"]
margin_left = -58.5199
margin_top = -670.921
margin_right = 141.48
margin_bottom = -590.921
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 2 )
text = "lvl"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="playersound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Baner in game" type="Node" parent="."]
script = ExtResource( 10 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-2123703602619663/7291214118"
[connection signal="tree_exiting" from="." to="." method="_on_Player_tree_exiting"]
[connection signal="pressed" from="player2/menuquit" to="." method="_on_menuquit_pressed"]
